--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
      "esModuleInterop": true,
      "sourceMap": true,
      "allowJs": true,
-     "rootDir": "main/src",
-     "outDir": "dist/src",
+     "rootDir": "main",
+     "outDir": "dist",
      "noEmitOnError": true,
      "typeRoots": [ "node_modules/@types" ]
   },
